--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="col-1">
             <h2><span class="creative" data-text="I">I</span>NTELIGENCIA<br><span class="creative">A</span>RTIFICIAL</h2>
             <h3>¿Qué es?</h3>
-            <p>Es ar las capacidades intelectuales humanas. Al combinar estas capacidades, la IA hace que los sistemas informáticos sean más autónomo, inteligente e versátil, abriendo un abanico de posibilidades para diferentes áreas.</p>
+            <p>Es una rama informatica centarda en la creacion de simular las capacidades intelectuales humanas. Al combinar estas capacidades, la IA hace que los sistemas informáticos sean más autónomo, inteligente e versátil, abriendo un abanico de posibilidades para diferentes áreas.</p>
             
             <button type="button"  id="playvideo"><p class="text-play" onclick="playvideo()">- Ver Video -</p> <i class="fa-solid fa-play" id="play"></i> </button>
         </div>
