--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h3>¿Qué es?</h3>
             <p>Es una rama informatica centarda en la creacion de simular las capacidades intelectuales humanas. Al combinar estas capacidades, la IA hace que los sistemas informáticos sean más autónomo, inteligente e versátil, abriendo un abanico de posibilidades para diferentes áreas.</p>
             
-            <button type="button"  id="playvideo"><p class="text-play" onclick="playvideo()">- Ver Video -</p> <i class="fa-solid fa-play" id="play"></i> </button>
+            <button type="button"  id="playvideo"><p class="text-play" onclick="playvideo()">- Ver -</p> <i class="fa-solid fa-play" id="play"></i> </button>
         </div>
 
         <div class="col-2">
